--- a/chromium-extension/manifest.json
+++ b/chromium-extension/manifest.json
@@ -1,9 +1,10 @@
 {
   "name": "CDM Browser Extension",
-  "version": "1.0.0",
-  "description": "Download files with CDM",
+  "version": "0.2.1",
+  "description": "Easily send download links to the CDM app and skip browser downloads. Enjoy advanced features like pause, resume, scheduling, and faster speeds for a smarter downloading experience. Simplify your workflow today!",
   "manifest_version": 3,
-  "author": "ADdy2142",
+  "author": "Adel Bakhshi",
+  "homepage_url": "https://github.com/adel-bakhshi/cdm-browser-extension",
   "permissions": ["downloads", "downloads.shelf", "storage"],
   "icons": {
     "16": "images/icon-16.png",
