--- a/firefox-extension/manifest.json
+++ b/firefox-extension/manifest.json
@@ -5,7 +5,7 @@
   "manifest_version": 3,
   "author": "Adel Bakhshi",
   "homepage_url": "https://github.com/adel-bakhshi/cdm-browser-extension",
-  "permissions": ["downloads", "downloads.shelf", "storage", "scripting"],
+  "permissions": ["downloads", "storage", "scripting"],
   "host_permissions": ["http://localhost:5000/*"],
   "icons": {
     "16": "images/icon-16.png",
