--- a/firefox-extension/manifest.json
+++ b/firefox-extension/manifest.json
@@ -1,11 +1,11 @@
 {
   "name": "CDM Browser Extension",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Easily send download links to the CDM app and skip browser downloads. Enjoy advanced features like pause, resume, scheduling, and faster speeds for a smarter downloading experience. Simplify your workflow today!",
   "manifest_version": 3,
   "author": "Adel Bakhshi",
   "homepage_url": "https://github.com/adel-bakhshi/cdm-browser-extension",
-  "permissions": ["downloads", "storage", "scripting"],
+  "permissions": ["downloads", "storage", "scripting", "contextMenus"],
   "host_permissions": ["http://localhost:5000/*"],
   "icons": {
     "16": "images/icon-16.png",
@@ -15,12 +15,13 @@
   },
   "action": {},
   "background": {
-    "scripts": ["background.js"]
+    "scripts": ["background.js"],
+    "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "exclude_matches": ["*://www.google.com/*"],
+      "exclude_matches": ["*://*.google.com/*"],
       "css": ["media-popup/style.css"],
       "js": ["media-popup/script.js"]
     }
