Add the ability to capture multiple links

--- a/firefox-extension/manifest.json
+++ b/firefox-extension/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "CDM Browser Extension",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "Easily send download links to the CDM app and skip browser downloads. Enjoy advanced features like pause, resume, scheduling, and faster speeds for a smarter downloading experience. Simplify your workflow today!",
   "manifest_version": 3,
   "author": "Adel Bakhshi",
-  "homepage_url": "https://github.com/adel-bakhshi/cdm-browser-extension",
+  "homepage_url": "https://cdmapp.netlify.app/",
   "permissions": ["downloads", "storage", "scripting", "contextMenus"],
   "host_permissions": ["http://localhost:5000/*"],
   "icons": {
