--- a/chromium-extension/manifest.json
+++ b/chromium-extension/manifest.json
@@ -21,7 +21,19 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "exclude_matches": ["*://*.google.com/*"],
+      "exclude_matches": [
+        "*://*.google.com/*",
+        "*://*.youtube.com/*",
+        "*://*.youtu.be/*",
+        "*://*.vimeo.com/*",
+        "*://*.netflix.com/*",
+        "*://*.amazon.com/*",
+        "*://*.hulu.com/*",
+        "*://*.twitch.tv/*",
+        "*://*.dailymotion.com/*",
+        "*://*.disneyplus.com/*",
+        "*://*.hbomax.com/*"
+      ],
       "css": ["media-popup/style.css"],
       "js": ["media-popup/script.js"]
     }
