--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
   "manifest_version": 3,
   "author": "Adel Bakhshi",
   "homepage_url": "https://cdmapp.netlify.app/",
-  "permissions": ["downloads", "storage", "scripting", "contextMenus", "tabs", "alarms"],
-  "host_permissions": ["http://localhost:5000/*"],
+  "chromium:permissions": ["downloads", "storage", "scripting", "contextMenus", "alarms", "notifications"],
+  "firefox:permissions": ["downloads", "storage", "scripting", "contextMenus", "tabs", "alarms"],
+  "host_permissions": ["*://*/*", "http://localhost:5000/*"],
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
@@ -14,9 +15,11 @@
     "128": "images/icon-128.png"
   },
   "action": {},
-  "background": {
-    "scripts": ["background.js"],
-    "type": "module"
+  "chromium:background": {
+    "service_worker": "background.ts"
+  },
+  "firefox:background": {
+    "scripts": ["background.ts"]
   },
   "content_scripts": [
     {
@@ -34,14 +37,24 @@
         "*://*.disneyplus.com/*",
         "*://*.hbomax.com/*"
       ],
-      "css": ["media-popup/style.css"],
-      "js": ["media-popup/script.js"]
+      "css": ["content/media-downloader/style.css"],
+      "js": ["content/media-downloader/script.ts"]
     }
   ],
-  "browser_specific_settings": {
+  "firefox:browser_specific_settings": {
     "gecko": {
       "id": "adelbakhshi78@yahoo.com",
       "strict_min_version": "109.0"
     }
-  }
+  },
+  "web_accessible_resources": [
+    {
+      "resources": ["/public/templates/popup-template.html"],
+      "matches": ["<all_urls>"]
+    },
+    {
+      "resources": ["/public/templates/list-item-template.html"],
+      "matches": ["<all_urls>"]
+    }
+  ]
 }
