--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,13 @@ jobs:
         with:
           name: firefox-extension
           path: firefox-extension.zip
+
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            chromium-extension.zip
+            firefox-extension.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
