--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,12 +51,12 @@ jobs:
           name: firefox-extension
           path: firefox-extension.zip
 
-      - name: Upload to Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Create Release and Upload Assets
+        uses: softprops/action-gh-release@v2
         with:
+          tag: ${{ github.ref_name }}
+          name: CDM Browser Extension ${{ github.ref_name }}
           files: |
             chromium-extension.zip
             firefox-extension.zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
