--- a/src/manifest.json
+++ b/src/manifest.json
@@ -46,8 +46,7 @@
       "id": "adelbakhshi78@yahoo.com",
       "strict_min_version": "109.0",
       "data_collection_permissions": {
-        "required": false,
-        "optional": false
+        "required": ["none"]
       }
     }
   },
